
public static class ConstantStringManager
{
    public struct MonsterName
    {
        public const string Skeleton = "Skeleton";
        public const string OrcWolfRider = "OrcWolfRider";
    }

    public struct MonsterAnimatorParameters
    {
        public const string IsDead = "IsDead";
        public const string IsHurt = "IsHurt";
        public const string Movementspeed = "VelocityY";
        public const string IsInBattleState = "IsInBattleState";
        public const string Attack = "Attack";
        public const string Attack1 = "Attack1";
        public const string Attack2 = "Attack2";
        
    }

    public struct PlayerClassName
    {
        public const string Mage = "Mage";
        public const string Archer = "Archer";
        public const string Epeiste = "Epeiste";
    }

    public struct GameObjectName
    {
        public const string BattleManager = "BattleManager";
    }

    public struct SceneName
    {
        public const string MapScene = "MapScene";
    }
}